# ma_baseline_doa

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: basic_doa_config.yaml  pepper_robot_config.yaml
esiaf_doa/: doa_wrapper.py
launch/: esiaf_doa.launch  ma_baseline_doa.launch
ma_baseline_doa/: __init__.py  doa_wrapper.py
scripts/: start_doa.py
