<?xml version="1.0"?>
<package>
    <name>ma_baseline_doa</name>
    <version>0.0.1</version>
    <description>A simple Direction of Arrival node for the esiaf_ros framework</description>

    <maintainer email="rfeldh@gmail.com">Robert Feldhans</maintainer>
    <license>---none---</license>
    <author>rfeldhans</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>pepper_clf_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>package</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>pepper_clf_msgs</run_depend>


</package>
